Logica para consultar los Cars desde la vista al api

--- a/autoinnovationlabtest.Web/Views/Cars/Index.cshtml
+++ b/autoinnovationlabtest.Web/Views/Cars/Index.cshtml
@@ -13,8 +13,8 @@
                     <hr>
                     <div class="row">
                         <div class="col-4">
-                            @*<label asp-for="Status" class="col-form-label text-right"></label>
-                            <select asp-for="StatusSelected" asp-items="Model.StatusForFilter" class="form-control"></select>*@
+                            <label asp-for="Brands" class="col-form-label text-right"></label>
+                            <select asp-for="BrandId" asp-items="Model.Brands" class="form-control"></select>
                         </div>
                     </div>
                     <br />
