--- a/autoinnovationlabtest.Web/Views/Cars/Index.cshtml
+++ b/autoinnovationlabtest.Web/Views/Cars/Index.cshtml
@@ -32,6 +32,7 @@
                                         @Html.DisplayNameFor(model => model.Year)
                                     </th>
                                     <th>
+                                        @Html.DisplayNameFor(model => model.Brand)
                                     </th>
                                 </tr>
                             </thead>
@@ -46,37 +47,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-
-            $('#CarsTable').DataTable({
-                "ordering": false,
-                "language": {
-                    "sProcessing": "Procesando...",
-                    "sLengthMenu": "Mostrar _MENU_ registros",
-                    "sZeroRecords": "No se encontraron registros",
-                    "sEmptyTable": "No se encontraron registros",
-                    "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-                    "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
-                    "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
-                    "sInfoPostFix": "",
-                    "sSearch": "Buscar:",
-                    "sUrl": "",
-                    "sInfoThousands": ",",
-                    "sLoadingRecords": "Cargando...",
-                    "oPaginate": {
-                        "sFirst": "Primero",
-                        "sLast": "Último",
-                        "sNext": "Siguiente",
-                        "sPrevious": "Anterior"
-                    },
-                    "oAria": {
-                        "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
-                        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-                    }
-                }
-            });
-
-        });
-    </script>
+    <script src="~/js/car.js"></script>
 }
